most-of-the-labs/finished/DevOps-Materials/K8s/11 - Security Fundamentals/13Hands-On - Exploring Pod Selectors/policies/allow-curl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl
spec:
  podSelector:
    matchLabels:
      app: color-api
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: curl
            tier: backend
  # - from:
  #   - podSelector:
  #       #? we can use matchExpressions instead of matchLabels to be more flexible
  #       # matchExpression:
  #       # - key: app
  #       #   operator: In
  #       #   values: ["curl", "curl2"]
  #       matchLabels:
  #         app: curl
  #   # ? we can also have multiple from rules, for example to allow traffic from another set of pods
  #   - podSelector:
  #       matchLabels:
  #         tier: backend
